<resources>
    <string name="app_name">App Lock</string>
    <string name="app_lock">App Lock</string>
    <string name="first_step">Step One</string>
    <string name="detail_first_step">Create a password to enter when opening locked apps</string>
    <string name="create_pass">Create Password</string>
    <string name="second_step">Step Two</string>
    <string name="detail_second_step">App Lock requires user access. You can enable this feature in system settings</string>
    <string name="go_setting">Go to settings</string>
    <string name="third_step">Step Three</string>
    <string name="detail_third_step">Locking apps requires permission to overlay other apps. You can enable this feature in system settings</string>
    <string name="let_start">Start now</string>
    <string name="style_lock">Lock Style</string>
    <string name="night_mode">Night Mode</string>
    <string name="wallpaper_lock">Lock Wallpaper</string>
    <string name="change_pass">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_language">Languages</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="lock_style">Lock Style</string>
    <string name="lock_all">Lock All</string>
    <string name="detail_lock_all">Tap to lock all apps</string>
    <string name="un_lock_all">Unlock All</string>
    <string name="detail_unlock_all">Tap to unlock all apps</string>
    <string name="new_profile">Add new profile</string>
    <string name="status_first_step_pattern">Draw an unlock pattern</string>
    <string name="status_next_step_pattern">Draw pattern again to confirm</string>
    <string name="status_pattern_correct">Pattern set</string>
    <string name="status_pattern_incorrect">Please try again</string>
    <string name="schema_failed_pattern">Connect at least 4 dots</string>
    <string name="status_first_step_pin">Enter your pin</string>
    <string name="status_next_step_pin">Enter your pin again to confirm</string>
    <string name="status_pin_correct">Pin set</string>
    <string name="status_pin_incorrect">Please try again</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string-array name="fragment_name">
        <item>Applications</item>
        <item>Profiles</item>
    </string-array>
</resources>