<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/app_lock"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_action_bar"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_step"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_first_step"
                    android:layout_marginTop="9dp"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">
                    <Button
                        android:id="@+id/btn_createPass"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/create_pass"
                        android:backgroundTint="@color/colorButton"/>
                    <ImageView
                        android:id="@+id/image_done_createPass"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:src="@drawable/tick_done"
                        android:layout_gravity="center"
                        android:layout_marginStart="40dp"
                        app:tint="@color/colorGray"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_step"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_second_step"
                    android:layout_marginTop="9dp"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">
                    <Button
                        android:id="@+id/btn_setting_permission"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/go_setting"
                        android:backgroundTint="@color/colorButton"/>
                    <ImageView
                        android:id="@+id/image_setting_permission"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:src="@drawable/tick_done"
                        android:layout_gravity="center"
                        android:layout_marginStart="40dp"
                        app:tint="@color/colorGray"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_step"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_third_step"
                    android:layout_marginTop="9dp"
                    android:textSize="16sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">
                    <Button
                        android:id="@+id/btn_orverlay_permission"
                        android:layout_width="0dp"
                        android:layout_weight="6"
                        android:layout_height="wrap_content"
                        android:text="@string/go_setting"
                        android:backgroundTint="@color/colorButton"/>
                    <ImageView
                        android:id="@+id/image_overlay_permission"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:src="@drawable/tick_done"
                        android:layout_gravity="center"
                        android:layout_marginStart="40dp"
                        app:tint="@color/colorGray"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/let_start" />
</RelativeLayout>